refactor: DeathsDebt alternative mastery